# tex-gettext

./: .gitignore  LICENSE.md  Makefile  README.md  pyproject.toml
src/tex_gettext/: generate.py  tex_math.py  translator.py
tests/: test_tex_math.py
