[project]
name = "tex-gettext"
version = "1.0.0"
description = "Localization tool for TeX/LaTeX documents."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "pyicu>=2.16.1",
    "tz>=0.2.2",
    "tzlocal>=5.3.1",
]

[project.scripts]
tex-generate = "tex_gettext.generate:main"

[tool.ruff]
target-version = "py313"

line-length = 88

exclude = [
    ".git",
    ".venv",
    "__pycache__",
]

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "UP", "RUF"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[dependency-groups]
dev = [
    "mypy",
    "ruff",
]
